--- a/1.변수_입출력.ipynb
+++ b/1.변수_입출력.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "40b65b5a-5fd0-45a4-8a53-5c669aeb993d",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "이번달 매출액을 입력하세요 1000\n",
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "당신의 이름을 알려주세요. 휘주\n"
@@ -534,7 +534,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "이름을 입력하세요:  휘주\n"
@@ -548,7 +548,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "나이를 입력하세요:  31\n"
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "id": "88219a68-a4ed-418b-bc6d-1f30da1d671f",
    "metadata": {},
    "outputs": [
@@ -1104,11 +1104,48 @@
     "aaa_aa ()\n",
     "aaa_aa ()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8422e078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "048e3205",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ㅎㅈ님! 반갑습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('당신의 이름은 알려주세요 ')\n",
+    "print(name+\"님! 반갑습니다.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "hipython",
    "language": "python",
    "name": "python3"
   },
