--- a/2.자료형과연산.ipynb
+++ b/2.자료형과연산.ipynb
@@ -2118,10 +2118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e851f641-92b3-4768-94f0-fc18aeed56ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_object' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mlist_object\u001b[49m.insert()\n\u001b[32m      2\u001b[39m list_object.append()\n",
+      "\u001b[31mNameError\u001b[39m: name 'list_object' is not defined"
+     ]
+    }
+   ],
    "source": [
     "list_object.insert()\n",
     "list_object.append()"
@@ -2129,16 +2141,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "20aac98e-1310-47d4-8180-f74e2afb37dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('hi')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "hipython",
    "language": "python",
    "name": "python3"
   },
