--- a/32_python_sql.ipynb
+++ b/32_python_sql.ipynb
@@ -12,8 +12,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8813853c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MySQL 서버에 연결\n",
+    "con = pymysql.connect(\n",
+    "  host='localhost',\n",
+    "  user='root',\n",
+    "  password='1234',\n",
+    "  db='wntrade',\n",
+    "  charset='utf8'\n",
+    ")\n",
+    "#커서 생성\n",
+    "cursor = con.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e1870e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('show tables')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a4eb1af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('고객',)\n",
+      "('마일리지등급',)\n",
+      "('부서',)\n",
+      "('사원',)\n",
+      "('제품',)\n",
+      "('주문',)\n",
+      "('주문세부',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in cursor.fetchall():\n",
+    "  print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4d395d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql = '''\n",
+    "SELECT 사원번호\n",
+    ", 이름\n",
+    ", 부서명\n",
+    "FROM 사원 LEFT JOIN 부서\n",
+    "ON 사원.부서번호 = 부서.부서번호\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e80768a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8f552e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('E01', '이소미', '영업부')\n",
+      "('E02', '배재용', '기획부')\n",
+      "('E03', '유대현', '영업부')\n",
+      "('E04', '최소민', '영업부')\n",
+      "('E05', '안주훈', '영업부')\n",
+      "('E06', '이현진', '영업부')\n",
+      "('E07', '오영수', '영업부')\n",
+      "('E08', '선하라', '개발부')\n",
+      "('E09', '유가을', '영업부')\n",
+      "('E10', '정수진', None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in cursor.fetchall():\n",
+    "  print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1caf29b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.close()\n",
+    "con.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc46ec04",
    "metadata": {},
    "outputs": [],
    "source": []
