--- a/42.데이터전처리.ipynb
+++ b/42.데이터전처리.ipynb
@@ -7752,6 +7752,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "43d6a038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>unique</th>\n",
+       "      <th>top</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>continent</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Africa</th>\n",
+       "      <td>624</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Americas</th>\n",
+       "      <td>300</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asia</th>\n",
+       "      <td>396</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Europe</th>\n",
+       "      <td>360</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oceania</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          count unique          top freq\n",
+       "continent                               \n",
+       "Africa      624     52      Algeria   12\n",
+       "Americas    300     25    Argentina   12\n",
+       "Asia        396     33  Afghanistan   12\n",
+       "Europe      360     30      Albania   12\n",
+       "Oceania      24      2    Australia   12"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gap_df.groupby('continent')['country'].describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c063acec",
    "metadata": {},
