--- a/32_python_sql.ipynb
+++ b/32_python_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f0c5c267",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8813853c",
    "metadata": {},
    "outputs": [],
@@ -152,17 +152,430 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "fc46ec04",
    "metadata": {},
+   "source": [
+    "# 핵심 흐름 순서(항상)\n",
+    "- DB 연결\n",
+    "- cursor 생성\n",
+    "- SQL 실행 /db engine\n",
+    "- 결과 조회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bc29982e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql = '''\n",
+    "SELECT 담당자명\n",
+    ", 고객회사명\n",
+    ", 마일리지\n",
+    ", 고객.도시\n",
+    ", 도시평균마일리지\n",
+    ", 도시평균마일리지 - 마일리지 AS '마일리지 간 차이'\n",
+    "FROM 고객\n",
+    ", (\n",
+    "SELECT 도시\n",
+    ", AVG(마일리지) AS '도시평균마일리지'\n",
+    "FROM 고객 \n",
+    "GROUP BY 도시 \n",
+    ") AS 도시별요약\n",
+    "WHERE 고객.도시 = 도시별요약.도시;\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "29b19142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(sql)\n",
+    "result = cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f1df4fe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('이은광', '굿모닝서울', 15911, '서울특별시', Decimal('11137.0800'), Decimal('-4773.9200'))\n",
+      "('김병현', '엘케이 상사', 406, '서울특별시', Decimal('11137.0800'), Decimal('10731.0800'))\n",
+      "('김성민', '씨엔그룹', 8788, '광명시', Decimal('4587.5000'), Decimal('-4200.5000'))\n",
+      "('최지수', '오리안무역 ', 6119, '서울특별시', Decimal('11137.0800'), Decimal('5018.0800'))\n",
+      "('강준', '남해종합식품', 106, '구리시', Decimal('106.0000'), Decimal('0.0000'))\n",
+      "('김민경', '서보앰엔에프', 729, '서울특별시', Decimal('11137.0800'), Decimal('10408.0800'))\n",
+      "('배순용', '대정 인터내셔널', 128790, '서울특별시', Decimal('11137.0800'), Decimal('-117652.9200'))\n",
+      "('박지혜', '제원인터내쇼날', 47865, '서울특별시', Decimal('11137.0800'), Decimal('-36727.9200'))\n",
+      "('오선주', '케이리할리스', 8758, '김해시', Decimal('8758.0000'), Decimal('0.0000'))\n",
+      "('황수영', '비큐큐푸드', 100, '서울특별시', Decimal('11137.0800'), Decimal('11037.0800'))\n",
+      "('이두원', '진가식품', 122, '평택시', Decimal('122.0000'), Decimal('0.0000'))\n",
+      "('김효정', '진산푸드', 1034, '서울특별시', Decimal('11137.0800'), Decimal('10103.0800'))\n",
+      "('이상훈', '한승F&B', 1331, '서울특별시', Decimal('11137.0800'), Decimal('9806.0800'))\n",
+      "('이소영', '유로에이치', 6608, '서울특별시', Decimal('11137.0800'), Decimal('4529.0800'))\n",
+      "('김유환', '한국맥널트 무역', 939, '인천광역시', Decimal('13088.0000'), Decimal('12149.0000'))\n",
+      "('우지선', '유성물산교역', 7232, '서울특별시', Decimal('11137.0800'), Decimal('3905.0800'))\n",
+      "('김태욱', '프루트코리아', 713, '서울특별시', Decimal('11137.0800'), Decimal('10424.0800'))\n",
+      "('김예진', '하이롱 식품', 6935, '서울특별시', Decimal('11137.0800'), Decimal('4202.0800'))\n",
+      "('김웅인', '주은통상', 1068, '서울특별시', Decimal('11137.0800'), Decimal('10069.0800'))\n",
+      "('김승정', '경북무역', 1140, '서울특별시', Decimal('11137.0800'), Decimal('9997.0800'))\n",
+      "('홍소현', '그린로더스', 81479, '인천광역시', Decimal('13088.0000'), Decimal('-68391.0000'))\n",
+      "('조재민', '와이지트레이드', 139, '서울특별시', Decimal('11137.0800'), Decimal('10998.0800'))\n",
+      "('권덕현', '플라워푸드', 364, '서울특별시', Decimal('11137.0800'), Decimal('10773.0800'))\n",
+      "('박은빈', '에이원카프', 139, '대전광역시', Decimal('14822.0000'), Decimal('14683.0000'))\n",
+      "('박지윤', '진산푸드 ', 653, '서울특별시', Decimal('11137.0800'), Decimal('10484.0800'))\n",
+      "('윤석영', '엠앤에스푸드', 1258, '인천광역시', Decimal('13088.0000'), Decimal('11830.0000'))\n",
+      "('김시혜', '보성허브', 906, '서울특별시', Decimal('11137.0800'), Decimal('10231.0800'))\n",
+      "('권기호', '태원 산업', 7065, '상주시', Decimal('7065.0000'), Decimal('0.0000'))\n",
+      "('황진영', '이베르코 무역', 136, '서울특별시', Decimal('11137.0800'), Decimal('11001.0800'))\n",
+      "('유휘재', '경민코퍼레이션', 114, '서울특별시', Decimal('11137.0800'), Decimal('11023.0800'))\n",
+      "('조효주', '대화유피스', 78001, '서울특별시', Decimal('11137.0800'), Decimal('-66863.9200'))\n",
+      "('정대광', '인터비스', 857, '인천광역시', Decimal('13088.0000'), Decimal('12231.0000'))\n",
+      "('박동찬', '시드니식품', 943, '전주시', Decimal('943.0000'), Decimal('0.0000'))\n",
+      "('김경태', '선인 상사', 631, '동두천시', Decimal('631.0000'), Decimal('0.0000'))\n",
+      "('박준영', '한영킹푸드', 9897, '서울특별시', Decimal('11137.0800'), Decimal('1240.0800'))\n",
+      "('신민주', '성민식품상사', 382, '춘천시', Decimal('382.0000'), Decimal('0.0000'))\n",
+      "('지승환', '조흥식품', 22260, '서울특별시', Decimal('11137.0800'), Decimal('-11122.9200'))\n",
+      "('오명일', '우양 통상', 8722, '서울특별시', Decimal('11137.0800'), Decimal('2415.0800'))\n",
+      "('김진혁', '상미식품', 917, '서울특별시', Decimal('11137.0800'), Decimal('10220.0800'))\n",
+      "('송아린', '진흥 상사', 2819, '부산광역시', Decimal('3985.2000'), Decimal('1166.2000'))\n",
+      "('정지윤', '신영 푸드', 449, '서울특별시', Decimal('11137.0800'), Decimal('10688.0800'))\n",
+      "('최해주', '세미원푸드', 7106, '부천시', Decimal('3614.5000'), Decimal('-3491.5000'))\n",
+      "('조희진', '진영무역', 8607, '과천시', Decimal('4835.5000'), Decimal('-3771.5000'))\n",
+      "('박소영', '태산무역', 806, '부산광역시', Decimal('3985.2000'), Decimal('3179.2000'))\n",
+      "('조가영', '태흥푸드', 36960, '서울특별시', Decimal('11137.0800'), Decimal('-25822.9200'))\n",
+      "('주민영', '오뚜락', 8838, '제주시', Decimal('8838.0000'), Decimal('0.0000'))\n",
+      "('이소연', '그린월드푸드 ', 428, '대전광역시', Decimal('14822.0000'), Decimal('14394.0000'))\n",
+      "('이수호', '뉴서울제과', 409, '오산시', Decimal('409.0000'), Decimal('0.0000'))\n",
+      "('정솔미', '푸드웰 통상', 662, '서울특별시', Decimal('11137.0800'), Decimal('10475.0800'))\n",
+      "('이성은', '헤리토 상사', 124, '서울특별시', Decimal('11137.0800'), Decimal('11013.0800'))\n",
+      "('조연희', '시대 통상', 7135, '수원시', Decimal('7135.0000'), Decimal('0.0000'))\n",
+      "('이재열', '진해푸드', 4036, '서울특별시', Decimal('11137.0800'), Decimal('7101.0800'))\n",
+      "('김도연', '보라티', 123, '부천시', Decimal('3614.5000'), Decimal('3491.5000'))\n",
+      "('신종수', '민성 무역', 10006, '서울특별시', Decimal('11137.0800'), Decimal('1131.0800'))\n",
+      "('손창민', '청운유통', 3852, '제천시', Decimal('3852.0000'), Decimal('0.0000'))\n",
+      "('서현지', '쉐프스푸드', 8717, '서울특별시', Decimal('11137.0800'), Decimal('2420.0800'))\n",
+      "('김지현', '코리아유통', 3967, '서울특별시', Decimal('11137.0800'), Decimal('7170.0800'))\n",
+      "('홍지우', '신푸드', 1149, '안산시', Decimal('1149.0000'), Decimal('0.0000'))\n",
+      "('김재경', '대두식품', 130, '서울특별시', Decimal('11137.0800'), Decimal('11007.0800'))\n",
+      "('오용석', '대덕종합무역', 1020, '서울특별시', Decimal('11137.0800'), Decimal('10117.0800'))\n",
+      "('오유진', '케이티에스씨', 7795, '부산광역시', Decimal('3985.2000'), Decimal('-3809.8000'))\n",
+      "('최효신', '지앤씨푸드', 1116, '서울특별시', Decimal('11137.0800'), Decimal('10021.0800'))\n",
+      "('이승연', '은혜식품', 387, '광명시', Decimal('4587.5000'), Decimal('4200.5000'))\n",
+      "('정다경', '솜인터내셔널', 120, '인천광역시', Decimal('13088.0000'), Decimal('12968.0000'))\n",
+      "('유석희', '코스리아 무역', 112, '인천광역시', Decimal('13088.0000'), Decimal('12976.0000'))\n",
+      "('이영훈', '한지생활건강', 884, '서울특별시', Decimal('11137.0800'), Decimal('10253.0800'))\n",
+      "('서우진', '한얼트레이딩', 903, '서울특별시', Decimal('11137.0800'), Decimal('10234.0800'))\n",
+      "('윤성준', '태화농산', 3888, '서울특별시', Decimal('11137.0800'), Decimal('7249.0800'))\n",
+      "('서한석', '프라하바이오', 432, '서울특별시', Decimal('11137.0800'), Decimal('10705.0800'))\n",
+      "('문인수', '엘에이플러스', 6851, '인천광역시', Decimal('13088.0000'), Decimal('6237.0000'))\n",
+      "('한현구', '황인터프라이시스', 116898, '서울특별시', Decimal('11137.0800'), Decimal('-105760.9200'))\n",
+      "('김동진', '시아 통상', 3873, '나주시', Decimal('3873.0000'), Decimal('0.0000'))\n",
+      "('김민준', '원양물산', 1092, '서울특별시', Decimal('11137.0800'), Decimal('10045.0800'))\n",
+      "('박건희', '탑푸드코리아', 57746, '대전광역시', Decimal('14822.0000'), Decimal('-42924.0000'))\n",
+      "('김지은', '대림에스엠', 1064, '과천시', Decimal('4835.5000'), Decimal('3771.5000'))\n",
+      "('김지호', '뉴가든상사', 1177, '부산광역시', Decimal('3985.2000'), Decimal('2808.2000'))\n",
+      "('김정현', '한림통상', 6942, '서울특별시', Decimal('11137.0800'), Decimal('4195.0800'))\n",
+      "('박규민', '국일식품', 733, '성남시', Decimal('799.0000'), Decimal('66.0000'))\n",
+      "('김보연', '지안 통상', 793, '서울특별시', Decimal('11137.0800'), Decimal('10344.0800'))\n",
+      "('김동호', '오트리푸드', 374, '서울특별시', Decimal('11137.0800'), Decimal('10763.0800'))\n",
+      "('정수환', '대동 무역', 975, '대전광역시', Decimal('14822.0000'), Decimal('13847.0000'))\n",
+      "('임재민', '오케이식품', 416, '공주시', Decimal('416.0000'), Decimal('0.0000'))\n",
+      "('김유희', '티알아이', 113, '안양시', Decimal('113.0000'), Decimal('0.0000'))\n",
+      "('김정원', '그린무역', 1213, '서울특별시', Decimal('11137.0800'), Decimal('9924.0800'))\n",
+      "('주현욱', '프레시코', 712, '의정부시', Decimal('712.0000'), Decimal('0.0000'))\n",
+      "('송지윤', '허브민트', 892, '시흥시', Decimal('892.0000'), Decimal('0.0000'))\n",
+      "('안수인', '컬러헬스푸드', 7329, '부산광역시', Decimal('3985.2000'), Decimal('-3343.8000'))\n",
+      "('김희원', '해피트리푸드', 448, '서울특별시', Decimal('11137.0800'), Decimal('10689.0800'))\n",
+      "('이승권', '금진 무역', 7296, '서울특별시', Decimal('11137.0800'), Decimal('3841.0800'))\n",
+      "('김하경', '유호무역 ', 865, '성남시', Decimal('799.0000'), Decimal('-66.0000'))\n",
+      "('장시현', '코림푸드', 1013, '서귀포시', Decimal('1013.0000'), Decimal('0.0000'))\n",
+      "('전혜연', '태성무역', 414, '서울특별시', Decimal('11137.0800'), Decimal('10723.0800'))\n",
+      "('장재성', '길드 통상', 261, '원주시', Decimal('261.0000'), Decimal('0.0000'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in cursor.fetchall():\n",
+    "  print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecbe693d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이걸 해야 다른 프로그램 돌릴 수 있음.\n",
+    "cursor.close()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3413815d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mysql과 연결하는 함수 정의\n",
+    "def getconnection():\n",
+    "  con = pymysql.connect(\n",
+    "  host='localhost',\n",
+    "  user='root',\n",
+    "  password='1234',\n",
+    "  db='wntrade',\n",
+    "  charset='utf8'\n",
+    ")\n",
+    "  return con"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ebc172ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3aa0bf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mysql 연결함수 호출\n",
+    "con = getconnection()\n",
+    "\n",
+    "try:\n",
+    "  # 2. 커서 생성 > with문 벗어나면 자동으로 cursor종료까지.\n",
+    "  with con.cursor() as cursor:\n",
+    "    # 3. sql 실행\n",
+    "    cursor.execute(sql)\n",
+    "    # 4. 쿼리실행결과 받기\n",
+    "    result = cursor.fetchall()\n",
+    "    # DataFrame으로 결과 변환하기\n",
+    "    result_df = pd.DataFrame(result)\n",
+    "    \n",
+    "finally:\n",
+    "  # 6. 연결 종료\n",
+    "  con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b3703abc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>이은광</td>\n",
+       "      <td>굿모닝서울</td>\n",
+       "      <td>15911</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>11137.0800</td>\n",
+       "      <td>-4773.9200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>김병현</td>\n",
+       "      <td>엘케이 상사</td>\n",
+       "      <td>406</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>11137.0800</td>\n",
+       "      <td>10731.0800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>김성민</td>\n",
+       "      <td>씨엔그룹</td>\n",
+       "      <td>8788</td>\n",
+       "      <td>광명시</td>\n",
+       "      <td>4587.5000</td>\n",
+       "      <td>-4200.5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>최지수</td>\n",
+       "      <td>오리안무역</td>\n",
+       "      <td>6119</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>11137.0800</td>\n",
+       "      <td>5018.0800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>강준</td>\n",
+       "      <td>남해종합식품</td>\n",
+       "      <td>106</td>\n",
+       "      <td>구리시</td>\n",
+       "      <td>106.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>이승권</td>\n",
+       "      <td>금진 무역</td>\n",
+       "      <td>7296</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>11137.0800</td>\n",
+       "      <td>3841.0800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>김하경</td>\n",
+       "      <td>유호무역</td>\n",
+       "      <td>865</td>\n",
+       "      <td>성남시</td>\n",
+       "      <td>799.0000</td>\n",
+       "      <td>-66.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>장시현</td>\n",
+       "      <td>코림푸드</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>서귀포시</td>\n",
+       "      <td>1013.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>전혜연</td>\n",
+       "      <td>태성무역</td>\n",
+       "      <td>414</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>11137.0800</td>\n",
+       "      <td>10723.0800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>장재성</td>\n",
+       "      <td>길드 통상</td>\n",
+       "      <td>261</td>\n",
+       "      <td>원주시</td>\n",
+       "      <td>261.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>93 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0       1      2      3           4           5\n",
+       "0   이은광   굿모닝서울  15911  서울특별시  11137.0800  -4773.9200\n",
+       "1   김병현  엘케이 상사    406  서울특별시  11137.0800  10731.0800\n",
+       "2   김성민    씨엔그룹   8788    광명시   4587.5000  -4200.5000\n",
+       "3   최지수  오리안무역    6119  서울특별시  11137.0800   5018.0800\n",
+       "4    강준  남해종합식품    106    구리시    106.0000      0.0000\n",
+       "..  ...     ...    ...    ...         ...         ...\n",
+       "88  이승권   금진 무역   7296  서울특별시  11137.0800   3841.0800\n",
+       "89  김하경   유호무역     865    성남시    799.0000    -66.0000\n",
+       "90  장시현    코림푸드   1013   서귀포시   1013.0000      0.0000\n",
+       "91  전혜연    태성무역    414  서울특별시  11137.0800  10723.0800\n",
+       "92  장재성   길드 통상    261    원주시    261.0000      0.0000\n",
+       "\n",
+       "[93 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "de367723",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 93 entries, 0 to 92\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   0       93 non-null     object\n",
+      " 1   1       93 non-null     object\n",
+      " 2   2       93 non-null     int64 \n",
+      " 3   3       93 non-null     object\n",
+      " 4   4       93 non-null     object\n",
+      " 5   5       93 non-null     object\n",
+      "dtypes: int64(1), object(5)\n",
+      "memory usage: 4.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_df.info()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hipython",
+   "display_name": "stats",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
