--- a/41.pandas_exercise_skeleton.ipynb
+++ b/41.pandas_exercise_skeleton.ipynb
@@ -4129,6 +4129,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2cce65e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean_charges</th>\n",
+       "      <th>median_charges</th>\n",
+       "      <th>count_charges</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">northeast</th>\n",
+       "      <th>no</th>\n",
+       "      <td>9165.531672</td>\n",
+       "      <td>8342.908750</td>\n",
+       "      <td>257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yes</th>\n",
+       "      <td>29673.536473</td>\n",
+       "      <td>28101.333050</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">northwest</th>\n",
+       "      <th>no</th>\n",
+       "      <td>8556.463715</td>\n",
+       "      <td>7256.723100</td>\n",
+       "      <td>267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yes</th>\n",
+       "      <td>30192.003182</td>\n",
+       "      <td>27488.996475</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">southeast</th>\n",
+       "      <th>no</th>\n",
+       "      <td>8032.216309</td>\n",
+       "      <td>6652.528800</td>\n",
+       "      <td>273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yes</th>\n",
+       "      <td>34844.996824</td>\n",
+       "      <td>37484.449300</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">southwest</th>\n",
+       "      <th>no</th>\n",
+       "      <td>8019.284513</td>\n",
+       "      <td>7348.142000</td>\n",
+       "      <td>267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yes</th>\n",
+       "      <td>32269.063494</td>\n",
+       "      <td>35165.256500</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  mean_charges  median_charges  count_charges\n",
+       "region    smoker                                             \n",
+       "northeast no       9165.531672     8342.908750            257\n",
+       "          yes     29673.536473    28101.333050             67\n",
+       "northwest no       8556.463715     7256.723100            267\n",
+       "          yes     30192.003182    27488.996475             58\n",
+       "southeast no       8032.216309     6652.528800            273\n",
+       "          yes     34844.996824    37484.449300             91\n",
+       "southwest no       8019.284513     7348.142000            267\n",
+       "          yes     32269.063494    35165.256500             58"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 여러 집계함수를 한번에 적용할 때 agg()를 사용\n",
+    "df.groupby(['region','smoker']).agg(\n",
+    "  mean_charges=('charges', 'mean'), \n",
+    "  median_charges = ('charges','median'), \n",
+    "  count_charges = ('charges','count')\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "id": "9ea38013",
    "metadata": {},
