--- a/43.시각화.ipynb
+++ b/43.시각화.ipynb
@@ -7253,24 +7253,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "6b72f8d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13cba983",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-3.7.1.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_f14d9e4c573bdc90ec335335405641f7 {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "\n",
+       "            &lt;style&gt;html, body {\n",
+       "                width: 100%;\n",
+       "                height: 100%;\n",
+       "                margin: 0;\n",
+       "                padding: 0;\n",
+       "            }\n",
+       "            &lt;/style&gt;\n",
+       "\n",
+       "            &lt;style&gt;#map {\n",
+       "                position:absolute;\n",
+       "                top:0;\n",
+       "                bottom:0;\n",
+       "                right:0;\n",
+       "                left:0;\n",
+       "                }\n",
+       "            &lt;/style&gt;\n",
+       "\n",
+       "            &lt;script&gt;\n",
+       "                L_NO_TOUCH = false;\n",
+       "                L_DISABLE_3D = false;\n",
+       "            &lt;/script&gt;\n",
+       "\n",
+       "        \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_f14d9e4c573bdc90ec335335405641f7&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_f14d9e4c573bdc90ec335335405641f7 = L.map(\n",
+       "                &quot;map_f14d9e4c573bdc90ec335335405641f7&quot;,\n",
+       "                {\n",
+       "                    center: [37.513111, 126.938542],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    ...{\n",
+       "  &quot;zoom&quot;: 13,\n",
+       "  &quot;zoomControl&quot;: true,\n",
+       "  &quot;preferCanvas&quot;: false,\n",
+       "}\n",
+       "\n",
+       "                }\n",
+       "            );\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_4749973844525b5acd139b9fe4766389 = L.tileLayer(\n",
+       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {\n",
+       "  &quot;minZoom&quot;: 0,\n",
+       "  &quot;maxZoom&quot;: 19,\n",
+       "  &quot;maxNativeZoom&quot;: 19,\n",
+       "  &quot;noWrap&quot;: false,\n",
+       "  &quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;,\n",
+       "  &quot;subdomains&quot;: &quot;abc&quot;,\n",
+       "  &quot;detectRetina&quot;: false,\n",
+       "  &quot;tms&quot;: false,\n",
+       "  &quot;opacity&quot;: 1,\n",
+       "}\n",
+       "\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            tile_layer_4749973844525b5acd139b9fe4766389.addTo(map_f14d9e4c573bdc90ec335335405641f7);\n",
+       "        \n",
+       "    \n",
+       "            var marker_e671ed2da3f36b7f4dbc69e5a25d0bf7 = L.marker(\n",
+       "                [37.513111, 126.938542],\n",
+       "                {\n",
+       "}\n",
+       "            ).addTo(map_f14d9e4c573bdc90ec335335405641f7);\n",
+       "        \n",
+       "    \n",
+       "            var icon_3bc12ecfdc00d644f11e83195d7a9b38 = L.AwesomeMarkers.icon(\n",
+       "                {\n",
+       "  &quot;markerColor&quot;: &quot;blue&quot;,\n",
+       "  &quot;iconColor&quot;: &quot;white&quot;,\n",
+       "  &quot;icon&quot;: &quot;info-sign&quot;,\n",
+       "  &quot;prefix&quot;: &quot;glyphicon&quot;,\n",
+       "  &quot;extraClasses&quot;: &quot;fa-rotate-0&quot;,\n",
+       "}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "        var popup_96fff05202e7be7bd4a698f8da34b371 = L.popup({\n",
+       "  &quot;maxWidth&quot;: &quot;100%&quot;,\n",
+       "});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_99bc36f2ce06bae80a6bbb165d68cf88 = $(`&lt;div id=&quot;html_99bc36f2ce06bae80a6bbb165d68cf88&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;시작 지점&lt;/div&gt;`)[0];\n",
+       "                popup_96fff05202e7be7bd4a698f8da34b371.setContent(html_99bc36f2ce06bae80a6bbb165d68cf88);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_e671ed2da3f36b7f4dbc69e5a25d0bf7.bindPopup(popup_96fff05202e7be7bd4a698f8da34b371)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    \n",
+       "                marker_e671ed2da3f36b7f4dbc69e5a25d0bf7.setIcon(icon_3bc12ecfdc00d644f11e83195d7a9b38);\n",
+       "            \n",
+       "    \n",
+       "            var marker_aabf78fd2e338be59ca331e1530e22e0 = L.marker(\n",
+       "                [37.513627, 126.926676],\n",
+       "                {\n",
+       "}\n",
+       "            ).addTo(map_f14d9e4c573bdc90ec335335405641f7);\n",
+       "        \n",
+       "    \n",
+       "            var icon_defd808f1bf43ba84730c80960e81d31 = L.AwesomeMarkers.icon(\n",
+       "                {\n",
+       "  &quot;markerColor&quot;: &quot;red&quot;,\n",
+       "  &quot;iconColor&quot;: &quot;white&quot;,\n",
+       "  &quot;icon&quot;: &quot;info-sign&quot;,\n",
+       "  &quot;prefix&quot;: &quot;glyphicon&quot;,\n",
+       "  &quot;extraClasses&quot;: &quot;fa-rotate-0&quot;,\n",
+       "}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "        var popup_9a9672f2d2f48e06869a9f9547079417 = L.popup({\n",
+       "  &quot;maxWidth&quot;: &quot;100%&quot;,\n",
+       "});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_385fafb305999f6c514cbbd21925bb7e = $(`&lt;div id=&quot;html_385fafb305999f6c514cbbd21925bb7e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;대방역 7번 출구&lt;/div&gt;`)[0];\n",
+       "                popup_9a9672f2d2f48e06869a9f9547079417.setContent(html_385fafb305999f6c514cbbd21925bb7e);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_aabf78fd2e338be59ca331e1530e22e0.bindPopup(popup_9a9672f2d2f48e06869a9f9547079417)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    \n",
+       "                marker_aabf78fd2e338be59ca331e1530e22e0.setIcon(icon_defd808f1bf43ba84730c80960e81d31);\n",
+       "            \n",
+       "    \n",
+       "            var poly_line_241523bd76a4003f88e15bd3df6ecfc6 = L.polyline(\n",
+       "                [[37.513111, 126.938542], [37.513627, 126.926676]],\n",
+       "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;purple&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;purple&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.7, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 5}\n",
+       "            ).addTo(map_f14d9e4c573bdc90ec335335405641f7);\n",
+       "        \n",
+       "    \n",
+       "            poly_line_241523bd76a4003f88e15bd3df6ecfc6.bindTooltip(\n",
+       "                `&lt;div&gt;\n",
+       "                     연결 경로\n",
+       "                 &lt;/div&gt;`,\n",
+       "                {\n",
+       "  &quot;sticky&quot;: true,\n",
+       "}\n",
+       "            );\n",
+       "        \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x2064f1c6bc0>"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. 지도 생성 (두 지점의 중간 정도를 중심으로 설정)\n",
+    "m = folium.Map(location=[37.513111, 126.938542], zoom_start=13)\n",
+    "\n",
+    "# 2. 시작점과 끝점 좌표 설정\n",
+    "start_point = [37.513111, 126.938542]    # 노량진 청탑학원\n",
+    "end_point = [37.513627, 126.926676]      # 대방역 7번 출구 인근\n",
+    "\n",
+    "# 3. 각 지점에 마커 찍기\n",
+    "folium.Marker(location=start_point, popup='시작 지점', icon=folium.Icon(color='blue')).add_to(m)\n",
+    "folium.Marker(location=end_point, popup='대방역 7번 출구', icon=folium.Icon(color='red')).add_to(m)\n",
+    "\n",
+    "# 4. 두 지점을 잇는 선 그리기 (PolyLine)\n",
+    "# locations에 [시작점, 끝점]을 리스트로 넣어줍니다.\n",
+    "folium.PolyLine(\n",
+    "    locations=[start_point, end_point],\n",
+    "    color='purple',      # 선 색상\n",
+    "    weight=5,            # 선 굵기\n",
+    "    opacity=0.7,         # 선 투명도\n",
+    "    tooltip='연결 경로'\n",
+    ").add_to(m)\n",
+    "\n",
+    "# 지도 확인\n",
+    "m"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "38a0af54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c296450",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a15022f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf41a8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8caf7df",
    "metadata": {},
    "outputs": [],
    "source": []
