--- a/webcrawlling/0.start.ipynb
+++ b/webcrawlling/0.start.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8d84aced",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "16da65f2",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "82f14078",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "4  repudiandae veniam quaerat sunt sed\\nalias aut...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,9 +163,506 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad718bf5",
+   "metadata": {},
+   "source": [
+    "# html 페이지 연결 'sample.html'\n",
+    "\n",
+    "LiveServer를 이용해 웹서비스 구동 한 다음 연결 할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd8ed7df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE html>\\r\\n<html lang=\"en\">\\r\\n<head>\\r\\n  <meta charset=\"UTF-8\">\\r\\n  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\\r\\n  <title>Document</title>\\r\\n</head>\\r\\n<body>\\r\\n<h1>Hello CSS</h1>    \\r\\n<div id=\"subject\">선택자</div>    \\r\\n<div class=\"contents\">선택자를 어떻게 작성하느냐에 따라        \\r\\n<span>다른 <b>요소가 반환</b></span> 됩니다.</div>    \\r\\n<div>CSS 선택자는 다양한 곳에서 <b>활용</b>됩니다.</div>\\r\\n<!-- Code injected by live-server -->\\n<script>\\n\\t// <![CDATA[  <-- For SVG support\\n\\tif (\\'WebSocket\\' in window) {\\n\\t\\t(function () {\\n\\t\\t\\tfunction refreshCSS() {\\n\\t\\t\\t\\tvar sheets = [].slice.call(document.getElementsByTagName(\"link\"));\\n\\t\\t\\t\\tvar head = document.getElementsByTagName(\"head\")[0];\\n\\t\\t\\t\\tfor (var i = 0; i < sheets.length; ++i) {\\n\\t\\t\\t\\t\\tvar elem = sheets[i];\\n\\t\\t\\t\\t\\tvar parent = elem.parentElement || head;\\n\\t\\t\\t\\t\\tparent.removeChild(elem);\\n\\t\\t\\t\\t\\tvar rel = elem.rel;\\n\\t\\t\\t\\t\\tif (elem.href && typeof rel != \"string\" || rel.length == 0 || rel.toLowerCase() == \"stylesheet\") {\\n\\t\\t\\t\\t\\t\\tvar url = elem.href.replace(/(&|\\\\?)_cacheOverride=\\\\d+/, \\'\\');\\n\\t\\t\\t\\t\\t\\telem.href = url + (url.indexOf(\\'?\\') >= 0 ? \\'&\\' : \\'?\\') + \\'_cacheOverride=\\' + (new Date().valueOf());\\n\\t\\t\\t\\t\\t}\\n\\t\\t\\t\\t\\tparent.appendChild(elem);\\n\\t\\t\\t\\t}\\n\\t\\t\\t}\\n\\t\\t\\tvar protocol = window.location.protocol === \\'http:\\' ? \\'ws://\\' : \\'wss://\\';\\n\\t\\t\\tvar address = protocol + window.location.host + window.location.pathname + \\'/ws\\';\\n\\t\\t\\tvar socket = new WebSocket(address);\\n\\t\\t\\tsocket.onmessage = function (msg) {\\n\\t\\t\\t\\tif (msg.data == \\'reload\\') window.location.reload();\\n\\t\\t\\t\\telse if (msg.data == \\'refreshcss\\') refreshCSS();\\n\\t\\t\\t};\\n\\t\\t\\tif (sessionStorage && !sessionStorage.getItem(\\'IsThisFirstTime_Log_From_LiveServer\\')) {\\n\\t\\t\\t\\tconsole.log(\\'Live reload enabled.\\');\\n\\t\\t\\t\\tsessionStorage.setItem(\\'IsThisFirstTime_Log_From_LiveServer\\', true);\\n\\t\\t\\t}\\n\\t\\t})();\\n\\t}\\n\\telse {\\n\\t\\tconsole.error(\\'Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.\\');\\n\\t}\\n\\t// ]]>\\n</script>\\n</body>\\r\\n</html>'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.get('http://127.0.0.1:5500/webcrawlling/sample.html')\n",
+    "res.text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddcbd81a",
+   "metadata": {},
+   "source": [
+    "# 웹페이지 파싱"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b838f55",
+   "metadata": {},
+   "source": [
+    "## 선택자로 추출하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "269ab255",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hel'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "h1_element = soup.select_one('h1')\n",
+    "\n",
+    "h1_element.text[:3]\n",
+    "# soup.select_one('h1').text >> 선택자를 이용한 요소 추출.txt 속성, 여기서는 h1이라는 태그가 선택자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2bd9cb9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello CSS'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('h1').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b7936fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'선택자'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('div').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "feaa976a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div id=\"subject\">선택자</div>,\n",
+       " <div class=\"contents\">선택자를 어떻게 작성하느냐에 따라        \n",
+       " <span>다른 <b>요소가 반환</b></span> 됩니다.</div>,\n",
+       " <div>CSS 선택자는 다양한 곳에서 <b>활용</b>됩니다.</div>]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('div')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aa607e3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div>CSS 선택자는 다양한 곳에서 <b>활용</b>됩니다.</div>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('div')[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9700c189",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CSS 선택자는 다양한 곳에서 활용됩니다.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('div')[2].text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad718bf5",
+   "id": "3380fdd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div id=\"subject\">선택자</div>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('div#subject') #id로 꺼내기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8319319f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div class=\"contents\">선택자를 어떻게 작성하느냐에 따라        \n",
+       "<span>다른 <b>요소가 반환</b></span> 됩니다.</div>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('div.contents') #class로 꺼내기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e716fbe5",
+   "metadata": {},
+   "source": [
+    "html 속에 있는 요소를 꺼내는 방법\n",
+    "1. 요소를 직접 지정 > find('요소명', id='id명')\n",
+    "2. 요소 검색 방법 > select('선택자') >> css의 문법 사용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf1910a",
+   "metadata": {},
+   "source": [
+    "선택자란, css 에서 요소를 지정하는 방법.\n",
+    "\n",
+    "- #은 id, .은 클래스, ex) '#subject', '.contents'\n",
+    "- 자식은 > ,   ex) 부모>자식, 'span>b'\n",
+    "- 여러개 요소 목록, ex) \"div, h1\" "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483ecb20",
+   "metadata": {},
+   "source": [
+    "- select()는 지정한 선택자의 요소를 모두 가져옵니다. [리스트로]\n",
+    "- select_one()은 지정한 선택자 요소 중 첫번째 요소만 반환합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7f7d846f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "활용\n"
+     ]
+    }
+   ],
+   "source": [
+    "b_tag = soup.select('div > b') # div 클래스 안에 있는 b 태그\n",
+    "print(b_tag[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "be6a898b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'활용'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select_one('div > b').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "58c387c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<b>요소가 반환</b>, <b>활용</b>]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('div b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a4817e0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello CSS\n"
+     ]
+    }
+   ],
+   "source": [
+    "h1 = soup.find(\"h1\")\n",
+    "print(h1.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "65260cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "선택자\n"
+     ]
+    }
+   ],
+   "source": [
+    "subject = soup.find(\"div\", id=\"subject\")\n",
+    "print(subject.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "094bb308",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "선택자를 어떻게 작성하느냐에 따라        \n",
+      "다른 요소가 반환 됩니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "contents = soup.find(\"div\", class_=\"contents\")\n",
+    "print(contents.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a7fdc388",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "활용\n"
+     ]
+    }
+   ],
+   "source": [
+    "third_div = soup.find_all(\"div\")[2]\n",
+    "b_inside = third_div.find(\"b\")\n",
+    "print(b_inside.get_text())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0a49c9",
+   "metadata": {},
+   "source": [
+    "# 실습 네이버 환율 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "df145c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n<script language=javascript src=\"/template/head_js.naver?referer=info.finance.naver.com&menu=market'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "url = 'https://finance.naver.com/marketindex/'\n",
+    "market_index = requests.get(url)\n",
+    "market_index.text[:100] # HTML의 처음 100글자 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "13d8e845",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"value\">1,446.30</span>,\n",
+       " <span class=\"value\">932.77</span>,\n",
+       " <span class=\"value\">1,703.60</span>,\n",
+       " <span class=\"value\">209.79</span>,\n",
+       " <span class=\"value\">154.5800</span>,\n",
+       " <span class=\"value\">1.1804</span>,\n",
+       " <span class=\"value\">1.3519</span>,\n",
+       " <span class=\"value\">97.6400</span>,\n",
+       " <span class=\"value\">66.31</span>,\n",
+       " <span class=\"value\">1691.19</span>,\n",
+       " <span class=\"value\">5225.6</span>,\n",
+       " <span class=\"value\">240563.94</span>]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(market_index.text, 'html.parser')\n",
+    "soup.select('div > span.value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b21e3480",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "미국 USD/KRW 환율: 1,446.30\n"
+     ]
+    }
+   ],
+   "source": [
+    "usd_price = soup.select('div > span.value')[0].text\n",
+    "print(f'미국 USD/KRW 환율: {usd_price}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "32c30cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "일본 JPY/KRW 환율: 932.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "jpy_price = soup.select('div > span.value')[1].text\n",
+    "print(f'일본 JPY/KRW 환율: {jpy_price}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52708db7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -173,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8ed7df",
+   "id": "a2a53641",
    "metadata": {},
    "outputs": [],
    "source": []
